--- a/WeatherInfo/Web/WeatherInfo.Web/js/react-weather/public/index.html
+++ b/WeatherInfo/Web/WeatherInfo.Web/js/react-weather/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,7 +13,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Weather Info</title>
+    <link href="https://192.168.1.18/Content/bootstrap.css" rel="stylesheet"/>
+    <link href="https://192.168.1.18/Content/site.css" rel="stylesheet"/>
+    <script src="https://192.168.1.18/Scripts/modernizr-2.6.2.js"></script>
+    <script src="https://192.168.1.18/scripts/angular.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
@@ -27,5 +31,11 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+
+    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="https://192.168.1.18/Scripts/jquery-1.10.2.js"></script>
+    <script src="https://192.168.1.18/Scripts/bootstrap.js"></script>
+    <script src="https://192.168.1.18/Scripts/respond.js"></script>
+
   </body>
 </html>
