--- a/WeatherInfo/Web/WeatherInfo.Web/js/react-weather/public/index.html
+++ b/WeatherInfo/Web/WeatherInfo.Web/js/react-weather/public/index.html
@@ -18,6 +18,7 @@
     <link href="https://192.168.1.18/Content/site.css" rel="stylesheet"/>
     <script src="https://192.168.1.18/Scripts/modernizr-2.6.2.js"></script>
     <script src="https://192.168.1.18/scripts/angular.min.js"></script>
+    <script src="https://maps.google.com/maps/api/js" async></script>
   </head>
   <body>
     <div id="root"></div>
@@ -32,10 +33,8 @@
       To create a production bundle, use `npm run build`.
     -->
 
-    <script src="https://maps.google.com/maps/api/js"></script>
     <script src="https://192.168.1.18/Scripts/jquery-1.10.2.js"></script>
     <script src="https://192.168.1.18/Scripts/bootstrap.js"></script>
     <script src="https://192.168.1.18/Scripts/respond.js"></script>
-
   </body>
 </html>
