--- a/WeatherInfo/Web/WeatherInfo.Web/js/react-weather/public/index.html
+++ b/WeatherInfo/Web/WeatherInfo.Web/js/react-weather/public/index.html
@@ -14,10 +14,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Weather Info</title>
-    <link href="https://192.168.1.18/Content/bootstrap.css" rel="stylesheet"/>
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+      integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+      crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <link href="https://192.168.1.18/Content/site.css" rel="stylesheet"/>
-    <script src="https://192.168.1.18/Scripts/modernizr-2.6.2.js"></script>
-    <script src="https://192.168.1.18/scripts/angular.min.js"></script>
     <script src="https://maps.google.com/maps/api/js" async></script>
   </head>
   <body>
@@ -33,8 +43,6 @@
       To create a production bundle, use `npm run build`.
     -->
 
-    <script src="https://192.168.1.18/Scripts/jquery-1.10.2.js"></script>
-    <script src="https://192.168.1.18/Scripts/bootstrap.js"></script>
     <script src="https://192.168.1.18/Scripts/respond.js"></script>
   </body>
 </html>
